--- a/foundations/flex/06-flex-layout/style.css
+++ b/foundations/flex/06-flex-layout/style.css
@@ -7,6 +7,24 @@ body {
   font-family: Roboto, sans-serif;
 }
 
+.header, .footer {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 20px;
+}
+
+.left-links, .right-links {
+  display: flex;
+  gap: 10px;
+  
+}
+
+.content {
+  text-align: center;
+  margin: 100px 0;
+}
+
 img {
   width: 600px;
 }
@@ -16,6 +34,8 @@ button {
   border: none;
   border-radius: 8px;
   background: #eee;
+  padding: 8px 12px;
+  margin-top: 15px;
 }
 
 input {
@@ -23,4 +43,19 @@ input {
   border-radius: 16px;
   padding: 8px 24px;
   width: 400px;
+  margin-top: 15px;
+}
+
+a {
+  text-decoration: none;
+  color: gray;
+}
+
+ul {
+  list-style-type: none;
+  padding: 0;
+}
+
+.footer {
+  background-color: #eeeeee;
 }
